apps/web-system/links/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.mirceanton.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: links
spec:
  hostnames: ["links.mirceanton.com"]
  parentRefs:
    - name: envoy-public
      namespace: network-system
  rules:
    - backendRefs:
        - name: links
          namespace: web-system
          port: 8080
